--- a/res/layout/fragment_canvas.xml
+++ b/res/layout/fragment_canvas.xml
@@ -15,7 +15,7 @@
         android:text="@string/guten_tag" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/returnButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
